@@ -1,23 +1,36 @@
 package edu.unam.springsecurity.controller;
 
+import edu.unam.springsecurity.enums.EstadoSolicitud;
+import edu.unam.springsecurity.enums.MotivoDeclinacion;
 import edu.unam.springsecurity.model.Solicitud;
 import edu.unam.springsecurity.model.Tecnico;
+import edu.unam.springsecurity.model.TecnicoDisponibilidad;
 import edu.unam.springsecurity.repository.SolicitudRepository;
 import edu.unam.springsecurity.repository.TecnicoRepository;
+import edu.unam.springsecurity.service.SolicitudService;
+import edu.unam.springsecurity.service.TecnicoService;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import java.time.DayOfWeek;
+import java.time.LocalTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -26,12 +39,21 @@ import java.util.stream.Collectors;
 @RequestMapping("/tecnico")
 public class TecnicoController {
 
+    private static final Logger log = LoggerFactory.getLogger(TecnicoController.class);
+
     private final TecnicoRepository tecnicoRepository;
     private final SolicitudRepository solicitudRepository;
+    private final SolicitudService solicitudService;
+    private final TecnicoService tecnicoService;
 
-    public TecnicoController(TecnicoRepository tecnicoRepository, SolicitudRepository solicitudRepository) {
+    public TecnicoController(TecnicoRepository tecnicoRepository,
+                             SolicitudRepository solicitudRepository,
+                             SolicitudService solicitudService,
+                             TecnicoService tecnicoService) {
         this.tecnicoRepository = tecnicoRepository;
         this.solicitudRepository = solicitudRepository;
+        this.solicitudService = solicitudService;
+        this.tecnicoService = tecnicoService;
     }
 
     private Tecnico currentTecnico(Authentication auth) {
@@ -53,20 +75,25 @@ public class TecnicoController {
         Tecnico tecnico = currentTecnico(auth);
         model.addAttribute("tecnico", tecnico);
 
-        List<Solicitud> mias = tecnico == null ? List.of() : solicitudRepository.findByTecnicoId(tecnico.getId());
-        Map<String, Long> porEstado = mias.stream().collect(Collectors.groupingBy(Solicitud::getEstado, Collectors.counting()));
-        long pendientes = porEstado.getOrDefault("Pendiente", 0L);
-        long enCurso = porEstado.getOrDefault("En Curso", 0L) + porEstado.getOrDefault("EnCurso", 0L);
-        long completadas = porEstado.getOrDefault("Completado", 0L) + porEstado.getOrDefault("Completada", 0L);
+        List<Solicitud> mias = tecnico == null ? Collections.emptyList() : solicitudRepository.findByTecnicoId(tecnico.getId());
+        Map<EstadoSolicitud, Long> porEstado = mias.stream()
+                .collect(Collectors.groupingBy(Solicitud::getEstado, Collectors.counting()));
+        long pendientes = porEstado.getOrDefault(EstadoSolicitud.PENDIENTE, 0L);
+        long aceptadas = porEstado.getOrDefault(EstadoSolicitud.ACEPTADA, 0L);
+        long enProceso = porEstado.getOrDefault(EstadoSolicitud.EN_PROCESO, 0L);
+        long completadas = porEstado.getOrDefault(EstadoSolicitud.COMPLETADA, 0L);
+        long declinadas = porEstado.getOrDefault(EstadoSolicitud.DECLINADA, 0L);
 
         model.addAttribute("totalSolicitudes", mias.size());
         model.addAttribute("pendientes", pendientes);
-        model.addAttribute("enCurso", enCurso);
+        model.addAttribute("aceptadas", aceptadas);
+        model.addAttribute("enProceso", enProceso);
         model.addAttribute("completadas", completadas);
+        model.addAttribute("declinadas", declinadas);
 
         // Evaluaciones y servicios (EAGER desde entidad)
-        model.addAttribute("evaluaciones", tecnico != null ? tecnico.getEvaluaciones() : List.of());
-        model.addAttribute("servicios", tecnico != null ? tecnico.getServicios() : List.of());
+        model.addAttribute("evaluaciones", tecnico != null ? tecnico.getEvaluaciones() : Collections.emptyList());
+        model.addAttribute("servicios", tecnico != null ? tecnico.getServicios() : Collections.emptyList());
 
         return "tecnico/dashboard";
     }
@@ -74,17 +101,130 @@ public class TecnicoController {
     @GetMapping("/solicitudes")
     public String solicitudes(Authentication auth, Model model) {
         Tecnico tecnico = currentTecnico(auth);
-        List<Solicitud> mias = tecnico == null ? List.of() : solicitudRepository.findByTecnicoId(tecnico.getId());
+        if (tecnico == null) {
+            return "redirect:/login";
+        }
+        List<Solicitud> pendientes = solicitudService.buscarPendientesPorTecnico(tecnico.getId());
+        List<Solicitud> agenda = solicitudService.buscarAgendaPorTecnico(tecnico.getId());
+
         model.addAttribute("tecnico", tecnico);
-        model.addAttribute("solicitudes", mias);
+        model.addAttribute("pendientes", pendientes);
+        model.addAttribute("agenda", agenda);
+        model.addAttribute("motivosDeclinacion", MotivoDeclinacion.values());
+        model.addAttribute("disponibilidades", tecnicoService.listarDisponibilidades(tecnico.getId()));
         return "tecnico/solicitudes";
+    }
+
+    @PostMapping("/solicitudes/{id}/aceptar")
+    public String aceptarSolicitud(@PathVariable Integer id,
+                                   @RequestParam(value = "contactoConfirmado", defaultValue = "false") boolean contactoConfirmado,
+                                   @RequestParam(value = "observaciones", required = false) String observaciones,
+                                   Authentication auth,
+                                   RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            redirectAttributes.addFlashAttribute("error", "No se encontró el técnico autenticado.");
+            return "redirect:/login";
+        }
+        try {
+            solicitudService.aceptarSolicitud(id, tecnico.getId(), contactoConfirmado, observaciones);
+            redirectAttributes.addFlashAttribute("mensajeExito", "Solicitud aceptada correctamente.");
+        } catch (Exception ex) {
+            log.warn("No fue posible aceptar la solicitud {}: {}", id, ex.getMessage());
+            redirectAttributes.addFlashAttribute("error", ex.getMessage());
+        }
+        return "redirect:/tecnico/solicitudes";
+    }
+
+    @PostMapping("/solicitudes/{id}/declinar")
+    public String declinarSolicitud(@PathVariable Integer id,
+                                    @RequestParam("motivo") MotivoDeclinacion motivo,
+                                    @RequestParam(value = "detalle", required = false) String detalle,
+                                    Authentication auth,
+                                    RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            redirectAttributes.addFlashAttribute("error", "No se encontró el técnico autenticado.");
+            return "redirect:/login";
+        }
+        try {
+            solicitudService.declinarSolicitud(id, tecnico.getId(), motivo, detalle);
+            redirectAttributes.addFlashAttribute("mensajeInfo", "Solicitud declinada y motivo registrado.");
+        } catch (Exception ex) {
+            log.warn("No fue posible declinar la solicitud {}: {}", id, ex.getMessage());
+            redirectAttributes.addFlashAttribute("error", ex.getMessage());
+        }
+        return "redirect:/tecnico/solicitudes";
+    }
+
+    @PostMapping("/disponibilidad/ahora")
+    public String actualizarDisponibilidadAhora(@RequestParam("disponible") boolean disponible,
+                                                @RequestParam(value = "notas", required = false) String notas,
+                                                Authentication auth,
+                                                RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            return "redirect:/login";
+        }
+        tecnicoService.actualizarDisponibilidadInmediata(tecnico.getId(), disponible, notas);
+        redirectAttributes.addFlashAttribute("mensajeExito", "Disponibilidad actualizada correctamente.");
+        return "redirect:/tecnico/solicitudes";
+    }
+
+    @PostMapping("/disponibilidad")
+    public String registrarDisponibilidad(@RequestParam("dia") DayOfWeek dia,
+                                          @RequestParam("horaInicio") String horaInicio,
+                                          @RequestParam("horaFin") String horaFin,
+                                          Authentication auth,
+                                          RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            return "redirect:/login";
+        }
+        try {
+            LocalTime inicio = LocalTime.parse(horaInicio);
+            LocalTime fin = LocalTime.parse(horaFin);
+            tecnicoService.registrarDisponibilidad(tecnico.getId(), dia, inicio, fin);
+            redirectAttributes.addFlashAttribute("mensajeExito", "Horario agregado correctamente.");
+        } catch (Exception ex) {
+            log.warn("Error al registrar disponibilidad: {}", ex.getMessage());
+            redirectAttributes.addFlashAttribute("error", "No se pudo registrar la disponibilidad: " + ex.getMessage());
+        }
+        return "redirect:/tecnico/solicitudes";
+    }
+
+    @PostMapping("/disponibilidad/{id}/estado")
+    public String actualizarEstadoDisponibilidad(@PathVariable Integer id,
+                                                 @RequestParam("activo") boolean activo,
+                                                 Authentication auth,
+                                                 RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            return "redirect:/login";
+        }
+        tecnicoService.actualizarEstadoDisponibilidad(id, tecnico.getId(), activo);
+        redirectAttributes.addFlashAttribute("mensajeInfo", "Disponibilidad actualizada.");
+        return "redirect:/tecnico/solicitudes";
+    }
+
+    @PostMapping("/disponibilidad/{id}/eliminar")
+    public String eliminarDisponibilidad(@PathVariable Integer id,
+                                         Authentication auth,
+                                         RedirectAttributes redirectAttributes) {
+        Tecnico tecnico = currentTecnico(auth);
+        if (tecnico == null) {
+            return "redirect:/login";
+        }
+        tecnicoService.eliminarDisponibilidad(id, tecnico.getId());
+        redirectAttributes.addFlashAttribute("mensajeInfo", "Disponibilidad eliminada.");
+        return "redirect:/tecnico/solicitudes";
     }
 
     @GetMapping("/evaluaciones")
     public String evaluaciones(Authentication auth, Model model) {
         Tecnico tecnico = currentTecnico(auth);
         model.addAttribute("tecnico", tecnico);
-        model.addAttribute("evaluaciones", tecnico != null ? tecnico.getEvaluaciones() : List.of());
+        model.addAttribute("evaluaciones", tecnico != null ? tecnico.getEvaluaciones() : Collections.emptyList());
         return "tecnico/evaluaciones";
     }
 
@@ -92,7 +232,7 @@ public class TecnicoController {
     public String servicios(Authentication auth, Model model) {
         Tecnico tecnico = currentTecnico(auth);
         model.addAttribute("tecnico", tecnico);
-        model.addAttribute("servicios", tecnico != null ? tecnico.getServicios() : List.of());
+        model.addAttribute("servicios", tecnico != null ? tecnico.getServicios() : Collections.emptyList());
         return "tecnico/servicios";
     }
 
@@ -100,6 +240,11 @@ public class TecnicoController {
     public String perfil(Authentication auth, Model model) {
         Tecnico tecnico = currentTecnico(auth);
         model.addAttribute("tecnico", tecnico);
+        if (tecnico != null) {
+            model.addAttribute("disponibilidades", tecnicoService.listarDisponibilidades(tecnico.getId()));
+        } else {
+            model.addAttribute("disponibilidades", Collections.emptyList());
+        }
         return "tecnico/perfil";
     }
 
@@ -110,19 +255,28 @@ public class TecnicoController {
                             @RequestParam("foto") MultipartFile foto,
                             Model model) {
         Tecnico tecnico = currentTecnico(auth);
-        if (tecnico == null || foto == null || foto.isEmpty()) {
+        if (tecnico == null) {
             return "redirect:/tecnico/perfil";
+        }
+        if (foto == null || foto.isEmpty()) {
+            model.addAttribute("errorFoto", "Debes seleccionar una imagen válida.");
+            return "tecnico/perfil";
         }
         try {
             String ext = edu.unam.springsecurity.util.Archivos.obtenerExtension(foto.getOriginalFilename());
+            if (!StringUtils.hasText(ext)) {
+                model.addAttribute("errorFoto", "El archivo debe contener una extensión válida.");
+                return "tecnico/perfil";
+            }
             String nombre = tecnico.getId() + "_" + System.currentTimeMillis() + "." + ext;
             String nombreGuardado = edu.unam.springsecurity.util.Archivos.almacenarConNombre(foto, RUTA_FOTO, nombre);
-            if (nombreGuardado != null) {
-                tecnico.setRutaFotoPerfil("/" + RUTA_FOTO + "/" + nombreGuardado);
-                tecnicoRepository.save(tecnico);
-            }
-        } catch (Exception e) {
-            // Log simple; se puede mejorar con un logger
+            tecnico.setRutaFotoPerfil("/" + RUTA_FOTO + "/" + nombreGuardado);
+            tecnicoRepository.save(tecnico);
+            model.addAttribute("mensajeFoto", "Foto actualizada correctamente.");
+        } catch (RuntimeException e) {
+            log.error("Error al almacenar la foto de perfil para el técnico {}: {}", tecnico.getId(), e.getMessage(), e);
+            model.addAttribute("errorFoto", "No se pudo guardar la foto. Intenta nuevamente.");
+            return "tecnico/perfil";
         }
         return "redirect:/tecnico/perfil";
     }
