@@ -5,6 +5,7 @@ import edu.unam.springsecurity.repository.UsuarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -22,7 +23,7 @@ public class UserServiceImpl implements UserService{
 
 	@Override
 	public List<Usuario> obtenerTodos() {
-		return List.of();
+        return Collections.emptyList();
 	}
 
 	@Override
